:sparkles: Add context parameter
